src/objects/Commercial_Insurance__c.object
<CustomObject>
    <description>XLR8 Custom Object designed for Commercial Property &amp; Casualty (P&amp;C) Insurance for Businesses</description>
    <fields>
        <fullName>Annual_Mileage__c</fullName>
        <label>Annual Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Premium__c</fullName>
        <inlineHelpText>The current annual premium for the current policy effective period.</inlineHelpText>
        <label>Annual Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bodily_Injury__c</fullName>
        <label>Bodily Injury</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Liability__c</fullName>
        <inlineHelpText>This is the business liability per occurrence.</inlineHelpText>
        <label>Business Liability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Carrier_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier/Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Active_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Account.Entity_Sub_Type__c</field>
                <operation>equals</operation>
                <value>Carrier/Provider</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Commercial_Insurance1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collision_Deductible__c</fullName>
        <label>Collision Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Damages_to_Rented_Premises__c</fullName>
        <label>Damages to Rented Premises</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <inlineHelpText>This is the deductible amount per occurrence.</inlineHelpText>
        <label>Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commercial P&amp;C</relationshipLabel>
        <relationshipName>Commercial_Insurance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Equipment_Coverage_Amount__c</fullName>
        <label>Equipment Coverage Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment_Replacement_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the policy is equipment replacement at cost.</inlineHelpText>
        <label>Equipment Replacement Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <label>Import ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Annual_Premium__c</fullName>
        <inlineHelpText>The original Annual premium paid for this policy at the time it was originally issued.</inlineHelpText>
        <label>Initial Annual Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insured_Individuals__c</fullName>
        <inlineHelpText>Named insured individuals for professional liability policy.</inlineHelpText>
        <label>Insured Individuals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Insured_Location__c</fullName>
        <label>Insured Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_State__c</fullName>
        <label>Issue State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Liability_Type__c</fullName>
        <label>Liability Type</label>
        <picklist>
            <picklistValues>
                <fullName>D&amp;O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E&amp;O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPLI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loss_of_Income__c</fullName>
        <label>Loss of Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Medical_Expenses_Per_Person__c</fullName>
        <label>Medical Expenses (Per Person)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Drivers__c</fullName>
        <label>Number of Drivers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Vehicles__c</fullName>
        <label>Number of Vehicles</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Account Withdrawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Personal_Injury__c</fullName>
        <label>Personal Injury</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Policy_Effective_Date__c</fullName>
        <label>Policy Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Expiration_Date__c</fullName>
        <inlineHelpText>This is also referred to as the next Renewal Date.</inlineHelpText>
        <label>Policy Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Issue_Age__c</fullName>
        <formula>IF(ISBLANK(Policy_Issued_Date__c ), &quot;&quot;, TEXT(((YEAR(TODAY()) - YEAR(Policy_Issued_Date__c ))*12)+(MONTH(TODAY()) - MONTH(Policy_Issued_Date__c )))&amp; &quot; Months&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of months since the policy has been issued.</inlineHelpText>
        <label>Policy Issue Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Issued_Date__c</fullName>
        <inlineHelpText>This is the original policy issue date when it was first issued.</inlineHelpText>
        <label>Policy Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Notes__c</fullName>
        <label>Policy Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Revenue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Management Record</label>
        <referenceTo>Potential_Revenue__c</referenceTo>
        <relationshipName>Commercial_Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Premium_Amount__c</fullName>
        <inlineHelpText>The amount of premium paid on a periodic basis (see Premium Frequency)</inlineHelpText>
        <label>Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Frequency__c</fullName>
        <label>Premium Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Premium__c</fullName>
        <inlineHelpText>The premium amount for a  previous policy effective period.</inlineHelpText>
        <label>Previous Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Producer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Commercial_Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Producer_Type__c</fullName>
        <label>Producer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Damage__c</fullName>
        <label>Property Damage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Month__c</fullName>
        <formula>CASE(MONTH( Policy_Expiration_Date__c ), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;, 4, &quot;April&quot;, 5, &quot;May&quot;, 6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the month of the policy renewal date, which is based on the Policy Expiration Date field</inlineHelpText>
        <label>Renewal Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Riders_Description__c</fullName>
        <label>Riders Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Structure_Coverage__c</fullName>
        <label>Structure Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Structure_Replacement_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the policy is structure replacement at cost.</inlineHelpText>
        <label>Structure Replacement Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terminated_Date__c</fullName>
        <label>Terminated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Reason__c</fullName>
        <label>Termination Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Employees__c</fullName>
        <formula>Entity__r.NumberOfEmployees</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uninsured_Motorist_Bodily_Injury__c</fullName>
        <label>Uninsured Motorist Bodily Injury</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Uninsured_Motorist_Property_Damage__c</fullName>
        <label>Uninsured Motorist Property Damage</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Waiting_Period_Accident__c</fullName>
        <label>Waiting Period (Accident)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiting_Period__c</fullName>
        <label>Waiting Period</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Commercial P&amp;C</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Entity__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Carrier_Provider__c</columns>
        <columns>Policy_Effective_Date__c</columns>
        <columns>Policy_Expiration_Date__c</columns>
        <columns>Renewal_Month__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Policy Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial P&amp;C</pluralLabel>
    <recordTypes>
        <fullName>Automobile</fullName>
        <active>true</active>
        <description>Commercial Auto Insurance</description>
        <label>Automobile</label>
    </recordTypes>
    <recordTypes>
        <fullName>Corporate_Liability</fullName>
        <active>true</active>
        <description>Commercial business owner&apos;s policy to cover Business Property and Professional Liability</description>
        <label>Corporate Liability</label>
    </recordTypes>
    <recordTypes>
        <fullName>Umbrella</fullName>
        <active>true</active>
        <description>Commercial Umbrella Insurance</description>
        <label>Umbrella</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workers_Comp</fullName>
        <active>true</active>
        <description>Workers Comp Policy</description>
        <label>Workers Comp</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>